--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>BEE PASS INDONESIA</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="favicon.png" rel="icon">
+  <link href="apple-touch-icon.png" rel="apple-touch-icon">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -22,8 +22,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
       <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <!-- <img src="https://lh4.googleusercontent.com/a2cqLiDNCbwEzIewK_FEczmdJhtox3JeLnumOngiKJ8Ie0D9z707E34TVjpmrBLeoKmBxfPmaDtGZQOZMghuXfmdzxiYXNi6TKjvP1IrUvceYlPeV-dOeNdf1Jc7gqPJOw=w1280"> -->
         <h1 class="">
           <img src="https://lh6.googleusercontent.com/-OJgqT5IZEAz3fkjx4V2GrkQ9i61TsNjytmTjAslxnvBKKT9v5N_HDWhNzGoZacp1Zmnga_FXWJP1g3f8MnG9O86cBFZ0GmKpcFRysce8NuBSpScYPTs-gxPhmv7rtBZdQ=w1280" >
       </h1>
