--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <link href="favicon.png" rel="icon">
-  <link href="apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="favicon.png" rel="apple-touch-icon">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
       <a href="index.html" class="logo d-flex align-items-center me-auto">
          <h1 class="">
-          <img src="https://lh6.googleusercontent.com/-OJgqT5IZEAz3fkjx4V2GrkQ9i61TsNjytmTjAslxnvBKKT9v5N_HDWhNzGoZacp1Zmnga_FXWJP1g3f8MnG9O86cBFZ0GmKpcFRysce8NuBSpScYPTs-gxPhmv7rtBZdQ=w1280" >
+          <img src="log.gif" >
       </h1>
       </a>
       <nav id="navmenu" class="navmenu">
@@ -45,7 +45,7 @@
   </header>
   <main class="main">
     <section id="hero" class="hero section">
-      <img src="https://lh4.googleusercontent.com/tyYWJ5slPebDAIWV-Q6MSk7fu6qlyssGBzhAiRKHRzMnLBdFL5H4xq6CeY1HBKXjyYZFfuBuKqSyb_-Z_burGKx_MXsQyetqpgMd_1LlmqWypmOvPg_QVZefDv-HKFR6nQ=w1280" alt="" data-aos="fade-in" class="">
+      <img src="hero-bg-abstract.jpg" alt="" data-aos="fade-in" class="">
       <div class="container">
         <div class="row justify-content-center" data-aos="zoom-out">
           <div class="col-xl-7 col-lg-9 text-center">
@@ -105,7 +105,7 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
-            <img src="https://lh6.googleusercontent.com/ogaM8YrIMnAlw-Rp_3KC-9dK_KZIMcWre5ehOjHQqzjHsBwQXJNF_f4PsDp8BgS9N9tNOceoLOLFTRVpc_tIJKA=w1280" class="img-fluid" alt="">
+            <img src="gb1.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
             <h3>Cut and Fill</h3>
@@ -129,24 +129,24 @@
       <div class="container" data-aos="fade-up">
         <div class="logo-slider">
           <div class="logo-track">
-            <img src="https://lh4.googleusercontent.com/pOgFOwYWetOnAQJZpK1hGJ8kBfuYZl4W9NeQcP3Z4Qw82bE1N59b07SWqjvu3W7g06P0g1EPso4yFMdBjJ0IPFLG3nOHGt1bl40B9KqBlO_2T5QzOwGWa2FvLBfQN-O_ow=w1280" class="img-fluid" alt="">
-            <img src="https://lh3.googleusercontent.com/rEJCWV2jG612O7VxOeav1uE4RA2NpWyM6RjWhr-gtBBZHQamTJFEagjZAb9Y2i03fSJ07bw8-7NfYy8jZapnpx8k0JFj65OvRMxdcUhSsVWF_Z33ik5TzdqEIR9VzlKbyA=w1280" class="img-fluid" alt="">
-            <img src="https://lh3.googleusercontent.com/EFjQemF7MnBr2gdiuRlANbpW0eBkooaWvGoy6DytELM4QXl_amZrpIqe6kr8bbWxQakYYCbeMumWx1NdtChg0Nu_YICIZOVM6LzL6s3X8Lve-quzbevq9d2BnnD3e7j8SA=w1280" class="img-fluid" alt="">
-            <img src="https://lh4.googleusercontent.com/IHThFYixrleCilNJUcrBfwZmmsCoRTZXxAlSj4Glk-0-gVOPn08VTf8RT-qQbOWByT0ZY2HeA5P2WtbWbdzuqXgmpudW8BJJP6lSwdZqVG7LUkf0KVxkXWXzViiw0q4K3w=w1280" class="img-fluid" alt="">
-            <img src="https://lh4.googleusercontent.com/7D_Bbc6Xp2eM3UuH-HkrP9_iblCIut8aweKsmGf1eH8TozP3FCRBBKCRoru2yVQsvV-ZxMq41KpJR0PpvU7qqUobZ_yyagIcJ9I0Ry00tEMUcvDzs7g051M9HZ-DvPQWKQ=w1280" class="img-fluid" alt="">
-            <img src="https://lh4.googleusercontent.com/qmS1BYeoHhf2Tvm_FutKDYkrD9mirF9sr7OIXlyyJKikKpolBH4hO-Oit5by8eMOJWzw0bZRC1US7u9PcpUCDPdz3oCZrFrnWapSX_tvznCQyb49T5ybcpTfRGFO6RbxJQ=w1280" class="img-fluid" alt="">
-            <img src="https://lh4.googleusercontent.com/pOgFOwYWetOnAQJZpK1hGJ8kBfuYZl4W9NeQcP3Z4Qw82bE1N59b07SWqjvu3W7g06P0g1EPso4yFMdBjJ0IPFLG3nOHGt1bl40B9KqBlO_2T5QzOwGWa2FvLBfQN-O_ow=w1280" class="img-fluid" alt="">
-            <img src="https://lh3.googleusercontent.com/rEJCWV2jG612O7VxOeav1uE4RA2NpWyM6RjWhr-gtBBZHQamTJFEagjZAb9Y2i03fSJ07bw8-7NfYy8jZapnpx8k0JFj65OvRMxdcUhSsVWF_Z33ik5TzdqEIR9VzlKbyA=w1280" class="img-fluid" alt="">
-            <img src="https://lh3.googleusercontent.com/EFjQemF7MnBr2gdiuRlANbpW0eBkooaWvGoy6DytELM4QXl_amZrpIqe6kr8bbWxQakYYCbeMumWx1NdtChg0Nu_YICIZOVM6LzL6s3X8Lve-quzbevq9d2BnnD3e7j8SA=w1280" class="img-fluid" alt="">
-            <img src="https://lh4.googleusercontent.com/IHThFYixrleCilNJUcrBfwZmmsCoRTZXxAlSj4Glk-0-gVOPn08VTf8RT-qQbOWByT0ZY2HeA5P2WtbWbdzuqXgmpudW8BJJP6lSwdZqVG7LUkf0KVxkXWXzViiw0q4K3w=w1280" class="img-fluid" alt="">
-            <img src="https://lh4.googleusercontent.com/7D_Bbc6Xp2eM3UuH-HkrP9_iblCIut8aweKsmGf1eH8TozP3FCRBBKCRoru2yVQsvV-ZxMq41KpJR0PpvU7qqUobZ_yyagIcJ9I0Ry00tEMUcvDzs7g051M9HZ-DvPQWKQ=w1280" class="img-fluid" alt="">
-            <img src="https://lh4.googleusercontent.com/qmS1BYeoHhf2Tvm_FutKDYkrD9mirF9sr7OIXlyyJKikKpolBH4hO-Oit5by8eMOJWzw0bZRC1US7u9PcpUCDPdz3oCZrFrnWapSX_tvznCQyb49T5ybcpTfRGFO6RbxJQ=w1280" class="img-fluid" alt="">
-            <img src="https://lh4.googleusercontent.com/pOgFOwYWetOnAQJZpK1hGJ8kBfuYZl4W9NeQcP3Z4Qw82bE1N59b07SWqjvu3W7g06P0g1EPso4yFMdBjJ0IPFLG3nOHGt1bl40B9KqBlO_2T5QzOwGWa2FvLBfQN-O_ow=w1280" class="img-fluid" alt="">
-            <img src="https://lh3.googleusercontent.com/rEJCWV2jG612O7VxOeav1uE4RA2NpWyM6RjWhr-gtBBZHQamTJFEagjZAb9Y2i03fSJ07bw8-7NfYy8jZapnpx8k0JFj65OvRMxdcUhSsVWF_Z33ik5TzdqEIR9VzlKbyA=w1280" class="img-fluid" alt="">
-            <img src="https://lh3.googleusercontent.com/EFjQemF7MnBr2gdiuRlANbpW0eBkooaWvGoy6DytELM4QXl_amZrpIqe6kr8bbWxQakYYCbeMumWx1NdtChg0Nu_YICIZOVM6LzL6s3X8Lve-quzbevq9d2BnnD3e7j8SA=w1280" class="img-fluid" alt="">
-            <img src="https://lh4.googleusercontent.com/IHThFYixrleCilNJUcrBfwZmmsCoRTZXxAlSj4Glk-0-gVOPn08VTf8RT-qQbOWByT0ZY2HeA5P2WtbWbdzuqXgmpudW8BJJP6lSwdZqVG7LUkf0KVxkXWXzViiw0q4K3w=w1280" class="img-fluid" alt="">
-            <img src="https://lh4.googleusercontent.com/7D_Bbc6Xp2eM3UuH-HkrP9_iblCIut8aweKsmGf1eH8TozP3FCRBBKCRoru2yVQsvV-ZxMq41KpJR0PpvU7qqUobZ_yyagIcJ9I0Ry00tEMUcvDzs7g051M9HZ-DvPQWKQ=w1280" class="img-fluid" alt="">
-            <img src="https://lh4.googleusercontent.com/qmS1BYeoHhf2Tvm_FutKDYkrD9mirF9sr7OIXlyyJKikKpolBH4hO-Oit5by8eMOJWzw0bZRC1US7u9PcpUCDPdz3oCZrFrnWapSX_tvznCQyb49T5ybcpTfRGFO6RbxJQ=w1280" class="img-fluid" alt="">
+            <img src="client-1.png" class="img-fluid" alt="">
+            <img src="client-2.png" class="img-fluid" alt="">
+            <img src="client-3.png" class="img-fluid" alt="">
+            <img src="client-4.png" class="img-fluid" alt="">
+            <img src="client-5.png" class="img-fluid" alt="">
+            <img src="client-6.png" class="img-fluid" alt="">
+            <img src="client-1.png" class="img-fluid" alt="">
+            <img src="client-2.png" class="img-fluid" alt="">
+            <img src="client-3.png" class="img-fluid" alt="">
+            <img src="client-4.png" class="img-fluid" alt="">
+            <img src="client-5.png" class="img-fluid" alt="">
+            <img src="client-6.png" class="img-fluid" alt="">
+            <img src="client-1.png" class="img-fluid" alt="">
+            <img src="client-2.png" class="img-fluid" alt="">
+            <img src="client-3.png" class="img-fluid" alt="">
+            <img src="client-4.png" class="img-fluid" alt="">
+            <img src="client-5.png" class="img-fluid" alt="">
+            <img src="client-6.png" class="img-fluid" alt="">
           </div>
         </div>
       </div>
@@ -277,22 +277,22 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://lh3.googleusercontent.com/smJ2r4uaJKqmcncEwTGYZ_G1ZFhGJUgQrKDXF3PB4Ix_kSPFOib75DCQlNQzYde0vNlLY6wkWYVywPpbATX0WBZTnXD-aWDZJmfzTk1mNQiKM7QLtZtIpnMhXe4FgQZWFw=w1280" class="d-block w-100" alt="Slide 1">
+          <img src="1.jpg" class="d-block w-100" alt="Slide 1">
         </div>
         <div class="carousel-item">
-          <img src="https://lh6.googleusercontent.com/MnX0eQTGTFe0o9CkvXyKfyNl981B0B0Jk1OiL1qFmKSSvs50zOSkXo3R0mLDn6OEuBYVlkBZkIbzGx8_Kf3T--DAlepBLGj_-_JsZplF1x2XowDs7Nr9deNcvKDQtvTjQw=w1280" class="d-block w-100" alt="Slide 2">
+          <img src="2.jpg" class="d-block w-100" alt="Slide 2">
         </div>
         <div class="carousel-item">
-          <img src="https://lh6.googleusercontent.com/pzBoYEwqpsaMB-3ZD8zQYipwUap2Gx8IH9DxTz7e6JgZhKdouXlh8cGbpRNXfp8_bCldV8rc8LWXsm_vnGl9CmE41n10Djo-k7DQlkPro3KHEsP2S3iCZlYiSRHN1cq2TA=w1280" class="d-block w-100" alt="Slide 3">
+          <img src="3.jpg" class="d-block w-100" alt="Slide 3">
         </div>
         <div class="carousel-item">
-          <img src="https://lh4.googleusercontent.com/gJkcd8out33IfKYjR5SqFXPAYI6lZQ1kr2ujrS_i9teWMh1zsfMs5dNHIuhQrrAY0ttPg9DFCtOSJAUsU5hdp6kdgF4PYzBb9zUtgno7-Gqj0nfxczRCmBi3oPVHKwkKjA=w1280" class="d-block w-100" alt="Slide 2">
+          <img src="4.jpg" class="d-block w-100" alt="Slide 2">
         </div>
         <div class="carousel-item">
-          <img src="https://lh5.googleusercontent.com/lctKmbVZMnZf53FJGLRc_BHPNswY0tBTtYyEhh2K8XPMNF7DdJdY3tSp4QRugoin_1CYklfdTjH55XEZqGJIyLRR0RS9kuzhC6eM2eNW132IXhemwdnDN08j81Onf2aK=w1280" class="d-block w-100" alt="Slide 2">
+          <img src="5.jpg" class="d-block w-100" alt="Slide 2">
         </div>
         <div class="carousel-item">
-          <img src="https://lh3.googleusercontent.com/1dazYmakhwlpxDgFUN0bs4k48i6yiLyV7pFA1AV_GZxdwh6KBSyf9bkYXqUMKugV_8WzTpOKo2sRlWTmWOb9ovtVW0JhRyc9mdVTaq45SgRvASSMTL3CpnJdT1AjsegJyA=w1280" class="d-block w-100" alt="Slide 2">
+          <img src="6.jpg" class="d-block w-100" alt="Slide 2">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
@@ -587,7 +587,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <img src="https://lh3.googleusercontent.com/uxAvfk3dHFxxkoDM2TeUjrrYpPtRfacWzQM7WRWNCt4AS3xgLsliROFFm6plunVeHrjQyOcSvKuqWqeVAl75PHY_CT4b8mUuHRlPz-udw7L9v6Xg86RrzoaVLarji6921A=w1280" alt="OnePage Logo" class="logo-img">
+            <img src="logo1.png" alt="OnePage Logo" class="logo-img">
         </a>   
         <p>Transform your vision into reality with our expert solutions. Quality, innovation, and excellence in every step.</p>
         <div class="social-links d-flex mt-4">
